# llm-sql-agent

./: .env.example  .gitignore  Makefile  README.md  conftest.py  demo.tape  pyproject.toml  requirements.txt
data/: eval_set.jsonl  schema.sql  seed.py
evals/: compare.py  harness.py  metrics.py  plot.py  rescore.py  tradeoff.py
results/: benchmark_summary.json  eval_results.json  eval_results_claude-haiku-4-5.json  eval_results_claude-opus-4-8.json  summary_claude-haiku-4-5.json  summary_claude-opus-4-8.json
scripts/: record_demo.py  render_all.py  render_demos.py  showcase.py
src/llm_sql_agent/: __init__.py  agent.py  cli.py  config.py  dataset.py  db.py  guardrails.py  naive.py  tracing.py
src/llm_sql_agent/llm/: __init__.py  anthropic_client.py  base.py  claude_cli_client.py  mock_client.py  ollama_client.py
src/llm_sql_agent/tools/: __init__.py  registry.py  sql_tools.py
tests/: fakes.py  test_agent_loop.py  test_benchmark.py  test_guardrails.py  test_metrics.py  test_smoke.py  test_smoke_real.py  test_tools.py
