[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-sql-agent"
version = "0.1.0"
description = "A production-grade agentic text-to-SQL system: naive vs. agent, measured on a ground-truth eval set."
requires-python = ">=3.10"
dependencies = [
    "sqlparse>=0.5",
    "rich>=13.0",
    "matplotlib>=3.7",
]

# The Claude backend shells out to the `claude` CLI (no API key, no SDK), so the
# only optional group is dev/test tooling.
[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
sql-agent = "llm_sql_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
